# dialer

./: .gitignore  .replit  SETUP_GUIDE.md  app.py  db.py  dialr.db  drizzle.config.ts  env.example  geo.py  main.py  next.config.mjs  package-lock.json  package.json  providers.py  pyproject.toml  realtime.py  replit.md  server.ts  tailwind.config.ts
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted---1777090766638_1777090766639.txt  Pasted--high-level--1777012073597_1777012073598.txt
public/: manifest.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/contacts/: page.tsx
src/app/dnc/: page.tsx
src/app/history/: page.tsx
src/app/lists/: page.tsx
src/app/messages/: page.tsx
src/app/network/: page.tsx
src/app/power/: page.tsx
src/app/scheduled/: page.tsx
src/app/scripts/: page.tsx
src/app/settings/: page.tsx
src/app/voicemail/: page.tsx
src/app/world/: page.tsx
src/components/: world-map.tsx
src/components/dialer/: active-call.tsx  cost-optimizer.tsx  keypad.tsx  number-display.tsx
src/components/shell/: command-palette.tsx  header.tsx  p2p-provider.tsx  page-header.tsx  providers.tsx  sidebar.tsx  sip-provider.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  flag.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  sheet.tsx  slider.tsx  sonner.tsx  switch.tsx  tabs.tsx  textarea.tsx  (+1 more)
src/lib/: phone.ts  rates.ts  utils.ts
static/: app.js  globe.js  styles.css
templates/: index.html
(+24 files in other folders)
