[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.41.0",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "gunicorn>=25.3.0",
    "phonenumbers>=9.0.28",
    "python-dotenv>=1.2.2",
    "simple-websocket>=1.1.0",
    "twilio>=9.10.5",
]
